<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".auth.RegisterActivity">

    <EditText
        android:id="@+id/etRegUsername"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/reg_field_rounded_bg"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text|textCapWords|textPersonName"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectPhoto"/>

    <EditText
        android:id="@+id/etRegEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/reg_field_rounded_bg"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/etRegUsername"
        app:layout_constraintStart_toStartOf="@+id/etRegUsername"
        app:layout_constraintTop_toBottomOf="@+id/etRegUsername"/>

    <EditText
        android:id="@+id/etRegPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/reg_field_rounded_bg"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/etRegEmail"
        app:layout_constraintStart_toStartOf="@+id/etRegEmail"
        app:layout_constraintTop_toBottomOf="@+id/etRegEmail"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/reg_btn_rounded_bg"
        android:text="@string/register"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/etRegPassword"
        app:layout_constraintStart_toStartOf="@+id/etRegPassword"
        app:layout_constraintTop_toBottomOf="@+id/etRegPassword"/>

    <TextView
        android:id="@+id/txtHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/already_have_an_account"
        android:textColor="#77FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"/>

    <Button
        android:id="@+id/btnSelectPhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/reg_select_photo_bg"
        android:text="@string/select_photo"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgPhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/btnSelectPhoto"
        app:layout_constraintEnd_toEndOf="@+id/btnSelectPhoto"
        app:layout_constraintStart_toStartOf="@+id/btnSelectPhoto"
        app:layout_constraintTop_toTopOf="@+id/btnSelectPhoto" />

</androidx.constraintlayout.widget.ConstraintLayout>